--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "Berlin"
+title: "Berlin, Part 1"
 date: 2014-03-03 14:31
 tags: Berlin, Germany
+published: false
 description:
 priority: 0.5
 ---
@@ -176,394 +177,3 @@ It wasn't switched on so I can't say how bad the pain really was.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13536495093/in/set-72157643245435323" title="PainStation by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7324/13536495093_06657420b0_c.jpg" width="598" height="800" alt="PainStation"></a>
 
-I did a huge amount of exploration around Berlin appreciating the street art,
-probably at least 4-5 days whole days worth in total if you added it all up. I
-did a few "self guided" walking tours (as in I had an itinerary or stuff to look
-for found somewhere online), A ton of randomly wandering after spotting a cool
-piece by chance, and a "Real Berlin" free walking tour that seemed to be quite
-heavily street art focused.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13567379395/in/set-72157643245435323" title="Rainbow drips by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13567379395_6fc9b174a3_c.jpg" width="800" height="601" alt="Rainbow drips"></a>
-
-On one of my many aimless explorations I stumbled upon some buskers playing in
-the street who were drawing quite a crowd.  A band called [The Trouble
-Notes](http://www.thetroublenotes.com/). One guy planing an electric violin, one
-guy finger picking the heck out of a guitar while also using it as a percussion
-instrument, and another dude sitting on a unique drum that was just kind of a
-square box. They had a very beautiful sound and were so damn good I stopped and
-listened to them for probably an hour.  I even bought a CD to support them, even
-though I have nothing to play it in! And I got a flyer for a show later in the
-month in a very hidden away warehouse.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13553720455/in/set-72157643245435323" title="The Trouble Notes are awesome! by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2818/13553720455_f90767f22c_c.jpg" width="679" height="800" alt="The Trouble Notes are awesome!"></a>
-
-I moved in with the Nicoles on the day of a "crafternoon" that was still in
-progress when I arrived. I hung out and tried to make an origami animal that had
-been stumping everyone all afternoon (damned if I can remember what the animal
-was now), but we struggled with it for a very long time before finding out there
-were instruction in the front explaining all the different arrows.  With this
-Nicole A was able to successfully make the animal! (I thought only men didn't
-read instructions, but now I know better :P)
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13562823055/in/set-72157643245435323" title="Fancy car and a colourful wall by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5457/13562823055_133c3262f8_c.jpg" width="800" height="357" alt="Fancy car and a colourful wall"></a>
-
-I spent an entire day exploring the street art around Warschauer Straße
-Station, in and amongst the converted warehouse along Revaler Straße. The area
-oozes creativity, with nearly every surface being covered in a colourful mural
-and most of the people looked like the sorts of folk my dad would look at
-disapprovingly as dirty hippies, my kind of people :)
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13564232873/in/set-72157643245435323" title="Berlin by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3724/13564232873_e9b584efaf_c.jpg" width="800" height="447" alt="Berlin"></a>
-
-I walked along the nearby East Side Gallery, a 1.3km long section of the wall
-that is not used as an open air art gallery. There over 100 painting, all of
-them huge. There was also a whole row of Trabants, the car of East Germany,
-parked along the side the wall.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13563950605/in/set-72157643245435323" title="Trabants by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13563950605_04431b441e_c.jpg" width="800" height="752" alt="Trabants"></a>
-
-I walked the whole length of the wall and then some of the backside as well and
-was lucky enough to come upon a bunch of artists spending their Sunday afternoon
-painting the backside of the wall and having a few beers. Work in progress
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13564854475/in/set-72157643245435323" title="Sunday drinks while painting the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3679/13564854475_694238308f_c.jpg" width="800" height="290" alt="Sunday drinks while painting the wall"></a>
-
-Another day I went on a "Real Berlin Walking Tour", as recommended by a friend
-who lived in Berlin briefly. The tour had a strong focus on graffiti and street
-art, which I didn't know about beforehand and meant we went to several places
-I'd already checked out. It was great a knowledgeable guide there to point
-specific artists works and styles, and then start recognising their stuff all
-around the city.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant by a crew who make art from stuff they find on the street"></a>
-
-I think our guide must have been well connected in with the street art community
-based on how much he seemed to know about individual artists, techniques, etc. I
-almost suspect he may have been one of the artists, although he denied it when I
-asked.
-
-On the tour I learned some more about the Berlin wall and the Cold War. One
-interesting titbit I picked up was that West Berlin was the only part of West
-Germany that didn't have conscription, which led to many of the liberals
-migrating there, which could explain the very liberal culture that exists there
-today.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13565231714/in/set-72157643245435323" title="Eyesore being built right between the wall and the river by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7038/13565231714_49c68617c3_c.jpg" width="800" height="391" alt="Eyesore being built right between the wall and the river"></a>
-
-I also learned how property developers have been allowed to start developing
-along the lovely green strip behind the long strip of wall that makes up the
-East Side Gallery, what a fuck up! I thought the one building that was in
-progress when I walked along there was a horribly inconvenient eye sore, meaning
-you could no longer walk along the full length of both sides of the wall. To
-find out they're now planning on building along most of that strip, including a
-section currently occupied by an African Youth support centre who are being
-evicted, is terrible.  Wikipedia even tells me they're going to knock down
-extensive segments of the gallery.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13567274875/in/set-72157643245435323" title="Fuck off Media Spree by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2810/13567274875_d3de7017e6_c.jpg" width="800" height="450" alt='"Fuck off Media Spree", the developers fucking up the Gallery'></a>
-
-Another day I visited the Deutsches Technikmuseum, the German Museum of
-Technology. I love science and technology museums as a rule, although this one
-had such a heavy focus on trains and planes that you could be forgiven for
-thinking it was a transport museum.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13568945104/in/set-72157643245435323" title="This musuem had a crazy number of planes in it by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2807/13568945104_6685df757b_c.jpg" width="601" height="800" alt="This musuem had so many planes they needed to mount this one vertically"></a>
-
-I especially liked this jet engine that was opened up so I could poke my head
-inside and get an idea of the insides of one of those things and how the
-"reverse thrust" thing planes do to stop actually works. I've since tried to
-look out the window as a flight was landing to try and see this in action but
-the wing gets in the way. :(
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13568499815/in/set-72157643245435323" title='Jet engine, the back is open in the "braking" position by Lucas the nomad, on Flickr'><img src="http://farm8.staticflickr.com/7408/13568499815_3175e0b7e5_c.jpg" width="800" height="601" alt='Jet engine, the back is open in the "braking" position'></a>
-
-Admittedly there were some other smaller sections about old bicycles, medicine,
-photography, old mechanical computers and televisions.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13567596055/in/set-72157643245435323" title="Wooden bike by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7077/13567596055_f5671ee900_c.jpg" width="800" height="601" alt="Wooden bike, totally hipster"></a>
-
-Some of the old televisions had Cathode Ray tubes so long that they would
-orient them with the screen facing the ceiling, and then use a 45º mirror to
-flip the image so a sitting viewer could watch it. To think today there are
-2+ metre televisions that are only a few cm thick... The progress of technology
-is awesome!
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13567824574/in/set-72157643245435323" title="Antique televisions. They're vertical with a mirror because the cathode ray tube was so long. by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2837/13567824574_fa301998a0_c.jpg" width="601" height="800" alt="Antique televisions. They're vertical with a mirror because the cathode ray tube was so long."></a>
-
-One evening while I was still staying with the two Nicoles, I went and saw The
-Trouble Notes do a live show with them and a friend of theirs. The venue was an
-old building hidden down a very dark alley, surrounded by building that felt
-like they were largely abandoned. It felt like the kind of place you went down
-to get stabbed, but it turned out ok for us. The Trouble Notes put on very good
-show, even if the support act was a bit too emo and the venue was super smoky.
-It really feels like I got in a time machine and went back 20 years to be back
-in a place where you can smoke in public venues.
-
-
-I spent a few days exploring the various museums on the Museum Island. First up
-was the Pergamon museum, which has in it's collection a giant Babylonian gate,
-and an ancient temple plundered from turkey.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13570513833/in/set-72157643245435323" title="Pergamon Altar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7315/13570513833_b093193675_c.jpg" width="800" height="601" alt="Pergamon Altar"></a>
-
-I read up and learnt that the Babylonian gate on display is actually the
-smaller, rear-side of the entrance way. The front must have been absolutely
-epic!
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13570336943/in/set-72157643245435323" title="Ishtar Gate by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7338/13570336943_508a1c623f_c.jpg" width="601" height="800" alt="Ishtar Gate"></a>
-
-The New Musuem was great, I found the building itself to be very interesting,
-with each room styled differently and quite uniquely. Much of it has been
-reconstructed since the war. It's funny, the place felt too old to be calling it
-the new museum.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13570806863/in/set-72157643245435323" title="More plundered loot by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13570806863_91ff2f0594_c.jpg" width="800" height="601" alt="More plundered loot in the New Museum"></a>
-
-I also went to the Old Museum which looks majestic from the outside, but I felt
-the inside of the building lacked any real character and was rather dull and
-sterile.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13570964433/in/set-72157643245435323" title="The old museum by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3675/13570964433_e1959ec409_c.jpg" width="800" height="601" alt="The old museum"></a>
-
-One morning I booked in to visit the Reichstag Building (the German Parliament),
-a building with an impressive glass dome on top of it, which you can go up for a
-nice view. It's free but you have to book online in advance.
-
-Surprise track work meant that I was pretty late, I'd left home cutting things
-pretty fine according to Google maps estimations, but then there were no trains
-running on the line I needed to change to, so I had to go to another station on
-a different line, then practically run to try and get there near the time I was
-scheduled to, all the while being mobbed by supposedly deaf street collectors.
-
-They hand you a card with a little statement in a bunch of languages asking you
-to sign their clipboard (petition? I cant remember), then if you don't read that
-clipboard you suddenly find you've signed up to make a donation.  Call me a
-cynic, but those deaf collectors look just like the gypsies in every other city
-in Europe.  I suspect they've just come up with a new way of extracting money
-from people without having to speak any language in particular.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13571856715/in/set-72157643245435323" title="Reichstag Building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3747/13571856715_cd8f850ee4_c.jpg" width="800" height="601" alt="Reichstag Building"></a>
-
-It was a very impressive building, the inside of the dome containing a structure
-of mirrors to collect and reflect light down into the parliament, lessening the
-need for artificial lighting.
-
-There was a ramp spiralling up around the dome, with an audio guide that is
-automatically activated as you walk around, giving you a great (but hard to
-photograph) view of the city in all directions.
-
-I had hesitations about visiting the Checkpoint Charlie Museum, because the
-street outside makes the whole area feel like an awful tourist trap, but it
-turned out to be nothing of the sort and was way better than I expected.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13569107935/in/set-72157643245435323" title="Checkpoint Charlie looks like a tourist trap on the street by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7038/13569107935_690ccf05dc_c.jpg" width="800" height="450" alt="Checkpoint Charlie looks like a tourist trap on the street"></a>
-
-It contained lots of interesting stories about the many successful and
-unsuccessful attempts to escape from East Germany to flee to the west.  There
-were stories about escapes hidden in the modified engine bay cars, secret
-compartments in huge welding machines, one woman who hid in a pair of suitcases
-side by side on the luggage rack of a train, hot air balloons, gliders, even
-some submarine attempts in the Baltic sea. The museum was actually very large,
-but I think the layout means a lot of people miss half of it. I pretty much had
-the place to myself in that section.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574369354/in/set-72157643245435323" title="Entering the American sector by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3707/13574369354_a88abda031_c.jpg" width="800" height="601" alt="Entering the American sector"></a>
-
-One very cold a miserable day I went out to see Sachsenhausen concentration
-camp, out at Oranienburg. The camp was about a two kilometre walk from the
-station in literally freezing cold mist.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574136123/in/set-72157643245435323" title="Sachsenhausen concentration camp by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5154/13574136123_5128f1e198_c.jpg" width="800" height="601" alt="Sachsenhausen concentration camp"></a>
-
-This camp had also been used by the Russians around 1945-50 after the war ended,
-although the use of the camp continued to be used to kill those who opposed the
-government after the war. There was lots of info about individual prisoners
-accounts and that sort of thing, but it was all fragments so I left without a
-very good picture of what things were like during that later period.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574588603/in/set-72157643245435323" title="The part used by Russia after WWII by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2865/13574588603_d6129b1b7b_c.jpg" width="800" height="601" alt="The part used by Russia after WWII"></a>
-
-
-The foundations of the buildings containing the gas chambers and the oven were
-all that is left. This building also contained the neck-shot room, in which they
-would tell the prisoners they were going to measure their height against a tape
-measure on the wall, but then a person in the adjoining room would fire a shot
-through a slit in the wall straight into their neck, killing them. The Nazis
-were not nice people at all.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574715373/in/set-72157643245435323" title="Ovens foundations by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3818/13574715373_5fa26d9d74_c.jpg" width="800" height="601" alt="Ovens foundations"></a>
-
-The exhibition in the infirmary had mention of there being a brothel on site,
-where females prisoners were forced to work, being raped by soldiers and
-selected prisoners as a means of rewarding them. Really messed up stuff.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574950624/in/set-72157643245435323" title="Guard tower by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13574950624_3b90ef9ba6_c.jpg" width="601" height="800" alt="Guard tower"></a>
-
-It was cold enough that most water on the ground had frozen solid, and the misty
-rain that started again as the sun was setting was awfully cold, but strangely
-appropriate for the venue. It really sunk in how hard it would have been being a
-new prisoner arriving in the winter, being given only summer clothes and made to
-stand out in the yard for 24 hours, not being allowed to move. I'm not surprised
-by how many died on their first night there.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574729685/in/set-72157643245435323" title="Frozen puddle by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3824/13574729685_1de76ae3d8_c.jpg" width="800" height="601" alt="Frozen puddle"></a>
-
-
-After leaving the camp I walked past a gluhwein seller not far down the road
-who was an absolute lifesaver. There's nothing like a hot, alcoholic beverage to
-warm your chilled bones.
-
-It was about this time that I had to move out from the Nicoles place as they had a friend coming to stay for Thanksgiving. I was sad to be
-leaving, they're both really lovely people. They made me feel right at home
-while I was there with them, so welcoming and friendly.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576145783/in/set-72157643245435323" title="Me and the two Nicoles, hiding out behind a tea fort by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2835/13576145783_14b4d46382_c.jpg" width="765" height="800" alt="Me and the two Nicoles, hiding out behind a tea fort"></a>
-
-Random fact about Nicole and Nicole is they like tea, and own enough of it to build a
-tea-fort.
-
-I moved to a hostel which had great reviews online, but turned out was almost
-solely inhabited by very blokey Australian guys, aside from the one staff member
-there who was English I think and very camp. I felt pretty out of place to put
-it nicely.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574866713/in/set-72157643245435323" title="Beate Uhse Erotic Museum by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5278/13574866713_2ab2331733_c.jpg" width="800" height="601" alt="Beate Uhse Erotic Museum"></a>
-
-I went and had a look at an erotic museum, part of the oldest sex shop in the
-world: Beate Uhse. It seemed like there was a lot of potential to have a very
-interesting museum but I found the place sort of dull. One of the two floors was
-almost solely about the woman who owned it, and the other floor was full of
-drawings and things that you could have told me were kitsch holiday souvenirs
-and I wouldn't have blinked.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576132425/in/set-72157643245435323" title="Nicole and Nicole are lovely people by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576132425_d19510e3d9_c.jpg" width="800" height="601" alt="Nicole and Nicole are lovely people"></a>
-
-Having only just left the Nicoles place, I was invited back the next night to
-take part in their Thanksgivukah celebrations, combining Thanksgiving and
-Hanukkah. The food  was delicious, mostly vegetarian or vegan, and the deserts
-were sickeningly sweet!  It was nice to meet some of their friends, one of whom
-was an Australian girl who was also born in Wagga Wagga (the funnily named town
-I was born in), and also moved away at a very young age. What are the odds?
-
-
-I got an email from Harmen that he was back in Berlin again so we met up and
-visited the DDR museum, a museum about how things were in East Germany during
-the communist era. It was a great exhibition, but it's crying out for a bigger
-space. The exhibition is overflowing with stuff to show so much so that half of
-it is hidden behind little flaps or in draws that you pull out, which isn't
-really compatible with having the place so packed full of people that there's no
-room to open the exhibitions. Hopefully the popularity will lead to them
-thinking about a bigger venue.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574951913/in/set-72157643245435323" title="Me in a Trabant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7361/13574951913_4fec5217ce_c.jpg" width="800" height="601" alt="Me in a Trabant"></a>
-
-One really neat thing there was the recreation of the inside of an East
-German apartment, complete with hidden bugs that you could listen to from
-another room in the museum.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575388144/in/set-72157643245435323" title="Cheers Harmen! by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3745/13575388144_018a2b7751_c.jpg" width="800" height="601" alt="Cheers Harmen!"></a>
-
-After the museum we went to to a brew pub called Brew Baker, that I'd been told
-had an amazing pumpkin ale on a special brew, a style that I'd never tried
-before. The pumpkin ale was alright, but the IPA and a super sweet dark beer
-they also had were my favourites. It was located inside a really nice looking
-little indoor market.
-
-<a href="https://www.flickr.com/photos/lucasthenomad/11224583626" title="Collapsed bridge in front of the wheel by Lucas Parry, on Flickr"><img src="https://farm3.staticflickr.com/2853/11224583626_70108cfed5_c.jpg" width="601" height="800" alt="Collapsed bridge in front of the wheel"></a>
-
-It was around this time I went and spent a day exploring Spreepark, an old
-abandoned theme park that in a pretty derelict state that I [blogged about
-earlier here](http://www.lucasthenomad.com/2013/12/05/spreepark-Berlin). Just
-recently I saw [this
-article](http://www.smithsonianmag.com/smart-news/berlin-just-bought-abandoned-theme-park-180950287/)
-saying that the city of Berlin has now bought the park, so I may have gotten
-very lucky getting to see it before it gets redeveloped into something else.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575101705/in/set-72157643245435323" title="Charlottenburg Palace by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3828/13575101705_f688cbbd87_c.jpg" width="800" height="601" alt="Charlottenburg Palace"></a>
-
-One morning I tried to go and see Schloss Charlottenburg, a huge palace now used
-as a museum, but I didn't think about the fact it was Monday so the building was
-closed. I got to explore the gardens though, which were really pretty.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575266765/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7113/13575266765_a2c54864c0_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
-
-There was a lovely light frosting on the parts of the very neatly manicured
-garden that were in the shade which gave a lovely effect.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575465633/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7233/13575465633_0a3d226a0e_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
-
-I spent my last few evenings in Berlin venturing around to various Christmas
-markets. At home I've felt jaded about Christmas for many years, but there was
-something about Christmas in Berlin that got through to.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575685933/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7378/13575685933_404c26c7ae_c.jpg" width="800" height="450" alt="Alexanderplatz Christmas Markets"></a>
-
-For once it didn't feel like a giant event organised by big companies to sell
-more shit. There was great food, tasty beverages, rides and amusements and most
-importantly there were people having a good time. Contrast that to my image of
-Christmas back home: overcrowded shopping malls full of people who don't want to
-be there, and it's easy to see why I prefer the way Berlin does it.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576063984/in/set-72157643245435323" title="Gluhwein! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7368/13576063984_d6d4128944_c.jpg" width="800" height="601" alt="Gluhwein!"></a>
-
-The first markets I went to was the huge one they have near Alexanderplatz,
-which was kind of like a big show in a country town.  There were loads of places
-selling gluhwein; you could get the regular stuff, optionally with a shot of
-spirits or schnapps, or eierpunsch, which is yellow and creamy like eggnog,
-super sweet and with whipped cream on top. They even had gluhbier, spiced beer
-served warm that was rich and a little sweet.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576186964/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3694/13576186964_b29f3390fb_c.jpg" width="800" height="601" alt="Alexanderplatz Christmas Markets"></a>
-
-I had some tasty shredded pork stuff for dinner, and a bag of "donut hole" type
-things for desert, and boy did I feel sick afterwards from eating all that sweet
-stuff.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576273754/in/set-72157643245435323" title="Bergstraße, the last street still cut off by the Berlin wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3730/13576273754_865530b401_c.jpg" width="800" height="601" alt="Bergstraße, the last street still cut off by the Berlin wall"></a>
-
-I spent my last day  at the Berlin Wall memorial. There are fragments of the
-multiple layers of wall, and there is an street that the wall still crosses
-which is the last street still cut off by the wall today.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576371664/in/set-72157643245435323" title="Deadzone through a crack in the wall by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7348/13576371664_0933a8fc86_c.jpg" width="800" height="601" alt="Deadzone through a crack in the wall"></a>
-
-There's also a section that has been rebuilt that had both complete walls, a
-guard tower and lights, giving you a much better feeling how it would be felt to
-be trapped in East Germany during the Soviet era.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576109973/in/set-72157643245435323" title="Wall reconstuction as seen from the viewing platform by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3819/13576109973_71720c6006_c.jpg" width="800" height="601" alt="Wall reconstuction as seen from the viewing platform"></a>
-
-There's also a viewing tower built so you can get a more elevated view of the
-whole thing.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576308664/in/set-72157643245435323" title="Me and the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13576308664_0f9c9a2677_c.jpg" width="800" height="450" alt="Me and the wall"></a>
-
-There were some interesting stories about buildings that were right along the
-border, that had doors opening both into East and West Berlin, allowing the
-owners access to both sides. Eventually the West German side was bricked up to
-stop people escaping via these houses, then the people were evicted, and finally
-the buildings were torn down.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576059895/in/set-72157643245435323" title="Bernauer Straße by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7390/13576059895_af1afc3e82_c.jpg" width="601" height="800" alt="Bernauer Straße Station"></a>
-
-West Berlin also had the underground train network, parts of which passed
-through under East Berlin city centre, but to stop people escaping through the
-metro tunnels the stations in East Berlin were bricked up and abandoned.
-Bernauer Straße station was one such station, but you wouldn't know it today.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576227415/in/set-72157643245435323" title="Swinging Barbecue by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7397/13576227415_9b6456df0d_c.jpg" width="800" height="601" alt="Swinging Barbecue at PrenzlauerBerg"></a>
-
-My last night in Berlin I hit a few more of the more traditional style Christmas
-markets at PrenzlauerBerg and Charlottenburg. These ones were far less fun-park
-like and had even more variety in food and handicrafts. PrenzlauerBerg had a
-strong showing of Swedish and Finnish stalls with their own takes on Gluhwein.
-There was also some huge BBQs where the grill was suspended by chains above the
-coals, slowly swinging and turning. I'm not sure if it had a functional purpose
-but it looked cool!
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13576305803/in/set-72157643245435323" title="Charlottenburg Palace Christmas Market by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576305803_c78197835f_c.jpg" width="800" height="601" alt="Charlottenburg Palace Christmas Market"></a>
-
-The Charlottenburg markets were out the front of Charlottenburg Palace, with
-lots and lots of food places. I had myself an epic roast dinner, then a huge
-Hungarian donut thing before stumbling home to my hostel to get ready for my
-flight the next morning to Spain.
